--- a/custom_components/load_shedding/manifest.json
+++ b/custom_components/load_shedding/manifest.json
@@ -1,10 +1,11 @@
 {
-  "domain": "load_shedding",
+  "domain": "eskom_loadshedding",
   "name": "Load Shedding",
   "documentation": "https://www.home-assistant.io/integrations/load_shedding/",
+  "issue_tracker": "https://github.com/wernerhp/ha_integration_load_shedding/issues",
   "requirements": ["load-shedding==0.4.0"],
   "codeowners": ["@wernerhp"],
   "version": "0.0.1",
   "config_flow": true,
-  "iot_class": "cloud_polling"
+  "iot_class": "local_polling"
 }
