--- a/custom_components/load_shedding/manifest.json
+++ b/custom_components/load_shedding/manifest.json
@@ -1,11 +1,19 @@
 {
   "domain": "load_shedding",
   "name": "Load Shedding",
-  "documentation": "https://www.home-assistant.io/integrations/load_shedding/",
-  "issue_tracker": "https://github.com/wernerhp/ha_integration_load_shedding/issues",
-  "requirements": ["load-shedding==0.5.6"],
-  "codeowners": ["@wernerhp"],
-  "version": "0.2.6",
   "config_flow": true,
-  "iot_class": "local_polling"
+  "documentation": "https://github.com/wernerhp/ha_integration_load_shedding/README.md",
+  "issue_tracker": "https://github.com/wernerhp/ha_integration_load_shedding/issues",
+  "requirements": [
+    "load_shedding==0.6.0"
+  ],
+  "ssdp": [],
+  "zeroconf": [],
+  "homekit": {},
+  "dependencies": [],
+  "codeowners": [
+    "@wernerhp"
+  ],
+  "iot_class": "cloud_polling",
+  "version": "0.3.0"
 }
