Update card4.yml for API updates (#35)
Minor change to make the API Quotas come through correctly.

--- a/examples/card4.yaml
+++ b/examples/card4.yaml
@@ -13,7 +13,7 @@ cards:
         icon: ''
       - type: template
         content: '{{state_attr(entity, "count")}}/{{state_attr(entity, "limit")}}'
-        entity: sensor.sepush_api_quota
+        entity: sensor.load_shedding_sepush_quota
         icon: mdi:api
         tap_action:
           action: more-info
