--- a/examples/automation1.yaml
+++ b/examples/automation1.yaml
@@ -1,14 +1,22 @@
 alias: Load Shedding (Stage)
-description: ''
+description: ""
 trigger:
   - platform: state
     entity_id:
-      - sensor.load_shedding_stage
-condition:
-  - condition: template
-    value_template: >-
-      {{ trigger.from_state.state != 'unavailable' and trigger.to_state.state != 'unavailable' }}
+      - sensor.load_shedding_stage_eskom
+    attribute: stage
+condition: []
 action:
+  - service: notify.mobile_app_nokia_8_sirocco
+    data:
+      title: Load Shedding
+      message: |-
+        {% if is_state_attr(trigger.entity_id, "stage", 0) %}
+          Suspended
+        {% else %}
+          {{ states(trigger.entity_id) }}
+        {% endif %}
+    enabled: true
   - choose:
       - conditions:
           - condition: or
@@ -39,17 +47,29 @@ action:
                 at: input_datetime.wake
             continue_on_timeout: false
     default: []
-  - service: notify.mobile_app_nokia_8_sirocco
-    data:
-      title: Load Shedding
-      message: '{{ states.sensor.load_shedding_stage.state }}'
   - service: tts.home_assistant_say
     data:
       entity_id: media_player.assistant_speakers
       cache: true
-      message: >-
-        {% if is_state("sensor.load_shedding_stage", "No Load Shedding") %} Load
-        Shedding suspended {% else %} Load Shedding {{
-        states.sensor.load_shedding_stage.state }} {% endif %}
-    enabled: false
+      message: |-
+        Load Shedding {% if is_state_attr(trigger.entity_id, "stage", 0) %}
+          Suspended
+        {% else %}
+          {{ states(trigger.entity_id) }}
+        {% endif %}
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 5
+      milliseconds: 0
+  - if:
+      - condition: state
+        entity_id: sensor.load_shedding_area_eskde_14_milnertoncityofcapetownwesterncape
+        state: "on"
+    then:
+      - service: tts.home_assistant_say
+        data:
+          message: Load shedding imminent!
+          entity_id: media_player.assistant_speakers
+          cache: true
 mode: single
