--- a/examples/dashboards/status_alert.yaml
+++ b/examples/dashboards/status_alert.yaml
@@ -1,22 +1,23 @@
 type: markdown
 content: >-
   {%- set stage_sensor = "sensor.load_shedding_stage_eskom" -%}
-  {%- set area_sensor = "sensor.load_shedding_area_tshwane_3_garsfonteinext8" -%}
-  {%- set stage = state_attr(stage_sensor, "stage") -%}
-  {%- set next_stage = state_attr(stage_sensor, "next_stage") -%}
-  {%- set next_start = state_attr(stage_sensor, "next_start_time") -%}
-  {%- set next_end = state_attr(stage_sensor, "next_end_time") -%}
-  {%- set alert = states(stage_sensor) -%}
+  {%- set area_sensor = "sensor.load_shedding_area_tshwane_3_garsfonteinext8d" -%}
+  {%- set stage = state_attr(stage_sensor, "stage") or 0 -%}
+  {%- set next_stage = state_attr(stage_sensor, "next_stage") or 0 -%}
+  {%- set next_start = state_attr(stage_sensor, "next_start_time") or 0 -%}
+  {%- set next_end = state_attr(stage_sensor, "next_end_time") or 0 -%}
+  {%- set alert = states(stage_sensor) or 0 -%}
   {%- set alert_type = "success" -%}
-  {% set area_forecast = state_attr(area_sensor, "forecast") -%}
-  {%- set starts_in = state_attr(area_sensor, "starts_in") -%}
-  {%- set ends_in = state_attr(area_sensor, "ends_in") -%}
+  {% set area_forecast = state_attr(area_sensor, "forecast") or 0 -%}
+  {%- set starts_in = state_attr(area_sensor, "starts_in") or 0 -%}
+  {%- set ends_in = state_attr(area_sensor, "ends_in") or 0 -%}
 
   {%- if area_forecast -%}
     {%- set next_start = area_forecast[0].start_time -%}
     {%- set next_end = area_forecast[0].end_time -%}
   {%- endif -%}
 
+  {%- set next_in = 0 -%}
   {%- if is_state(area_sensor, "off") and starts_in and next_start and next_end -%}
     {%- set next_in = starts_in if starts_in else 0 -%}
     {%- if next_start == 0 or next_end == 0 -%}
@@ -47,6 +48,6 @@ content: >-
   {%- set mins = next_in_sec % 60 -%}
   {%- set hrs = next_in_sec // 60 % 24 -%}
   {%- set days = next_in_sec // 1440 -%}
-  {%- set alert = alert.format(d=days, m=mins, h=hrs, next=next_time | timestamp_custom("%H:%M", True)) -%}
+  {%- set alert = alert.format(d=days, m=mins, h=hrs, next=next_time | timestamp_custom("%H:%M", True, default=0)) -%}
 
   <ha-alert alert-type="{{ alert_type }}">{{ alert }}</ha-alert>
